--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@popperjs/core": "^2.4.0",
     "angular-in-memory-web-api": "^0.9.0",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
     "ng-drag-drop": "^5.0.0",
     "ngx-bootstrap": "^5.3.2",
     "rxjs": "~6.5.4",
@@ -31,7 +32,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "^9.0.3",
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
@@ -46,7 +47,8 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.20.1",
     "typescript": "~3.6.4"
