--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.5.1",
     "ng-drag-drop": "^5.0.0",
     "ngx-bootstrap": "^5.3.2",
+    "npm": "^6.14.5",
     "rxjs": "^6.5.5",
     "tslib": "^1.13.0",
     "zone.js": "^0.10.3"
